--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.9",
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
+    "mysql": "^2.18.1",
     "ng2-charts": "^2.3.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
