--- a/package.json
+++ b/package.json
@@ -19,11 +19,17 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
+    "jquery": "^3.5.1",
+    "map": "^1.0.1",
     "mysql": "^2.18.1",
     "ng2-charts": "^2.3.2",
-    "rxjs": "~6.4.0",
+    "popper.js": "^1.16.1",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.6.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
