--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@angular/compiler": "~8.2.9",
     "@angular/core": "~8.2.9",
     "@angular/forms": "~8.2.9",
+    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "angular-google-charts": "^1.1.4",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
